# rosbot_xl

./: .gitignore  README.md  compose.yaml
scripts/: build_with_compile_commands.sh  configure_local_xhost.sh  connect.sh  startsim.sh
src/: rosbot.rviz
src/rosbot_xl_cpp_examples/: CMakeLists.txt  package.xml
src/rosbot_xl_cpp_examples/launch/: messaging.launch.py
src/rosbot_xl_cpp_examples/src/: demo_messaging_node.cpp
src/rosbot_xl_python_samples/: package.xml  setup.cfg  setup.py
src/rosbot_xl_python_samples/launch/: messaging.launch.py
